winryrockbell/dots/.config/xmonad/xmonad.errors

xmonad.hs:45:28: error: Not in scope: ‘altMask’
   |
45 |                          , altMask            = mod1Mask
   |                            ^^^^^^^
